Fix: main spacing

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,3 +1,13 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap-icons/font/bootstrap-icons.css';
 @import '~devicon/devicon.min.css';
+
+.wrapper {
+   min-height: 100vh;
+   display: flex;
+   flex-direction: column;
+}
+
+.main {
+   flex: 1 1 auto;
+}
